@@ -2,8 +2,7 @@ $|=1;
 BEGIN { print "1..6\n" }
 
 use AnyEvent;
-use AnyEvent::Impl::IOAsync;
-use IO::Async::Loop; AnyEvent::Impl::IOAsync::set_loop new IO::Async::Loop;
+use AnyEvent::Impl::IOAsync; use IO::Async::Loop; AnyEvent::Impl::IOAsync::set_loop new IO::Async::Loop;
 
 print "ok 1\n";
 
