@@ -1,9 +1,8 @@
 $|=1;
-$^W=0;
 BEGIN { print "1..6\n" }
 
 use AnyEvent;
-use AnyEvent::Impl::POE;
+use AnyEvent::Impl::POE; $^W = 0;
 
 print "ok 1\n";
 
