@@ -1,6 +1,3 @@
-$|=1;
-$^W=0;
-
 BEGIN {
    # check for broken perls
    if ($^O =~ /mswin32/i) {
@@ -18,11 +15,14 @@ EOF
 }
 
 BEGIN {
+   $|=1;
    print "1..7\n"
 }
 
+use POSIX ();
+
 use AnyEvent;
-use AnyEvent::Impl::POE;
+use AnyEvent::Impl::POE; $^W = 0;
 
 print "ok 1\n";
 
@@ -39,7 +39,7 @@ my $cv = AnyEvent->condvar;
 
 unless ($pid) {
    print "ok 2\n";
-   exit 3;
+   POSIX::_exit 3;
 }
 
 my $w = AnyEvent->child (pid => $pid, cb => sub {
@@ -50,7 +50,7 @@ my $w = AnyEvent->child (pid => $pid, cb => sub {
 
 $cv->wait;
 
-my $pid2 = fork || exit 7;
+my $pid2 = fork || POSIX::_exit 7;
 
 my $cv2 = AnyEvent->condvar;
 
@@ -60,11 +60,17 @@ my $w2 = AnyEvent->child (pid => 0, cb => sub {
    $cv2->broadcast;
 });
 
-my $error = AnyEvent->timer (after => 5, cb => sub {
+my $error = AnyEvent->timer (after => 15, cb => sub {
    print <<EOF;
 Bail out! No child exit detected. This is either a bug in AnyEvent or a bug in your Perl (mostly some windows distributions suffer from that): child watchers might not work properly on this platform. You can force installation of this module if you do not rely on child watchers, or you could upgrade to a working version of Perl for your platform.\n";
 EOF
    exit 0;
+});
+
+my $inter = AnyEvent->timer (after => 14, cb => sub {
+   print "not ok 5 # inter\n";
+   print "not ok 6 # inter\n";
+   $cv2->send;
 });
 
 $cv2->wait;
