@@ -1,10 +1,9 @@
 $|=1;
-$^W=0;
 BEGIN { print "1..18\n" }
 
 use AnyEvent;
 use AnyEvent::Util;
-use AnyEvent::Impl::POE;
+use AnyEvent::Impl::POE; $^W = 0;
 
 print "ok 1\n";
 
