@@ -1,5 +1,7 @@
 Revision history for Perl extension AnyEvent.
 
+	- POE and Event backends didn't accept some callable objects as 
+          callbacks.
 	- use Config module instead of POSIX module to detect signal names
           in AnyEvent::Strict and AnyEvent::Impl::EventLib, as the POSIX
           module doesn't even have all POSIX signals :/.
